[gd_scene load_steps=6 format=3 uid="uid://bx6ii0nltmndb"]

[ext_resource type="Texture2D" uid="uid://tg8xholnwjv3" path="res://Art/UI/CoopModeSelect/world1-level-select.png" id="1_crua5"]
[ext_resource type="Script" path="res://UI/Menus/Level Select/script/world1_level_select.gd" id="1_e2hin"]
[ext_resource type="FontFile" uid="uid://hisxnsk1olxb" path="res://Art/Fonts/m3x6.ttf" id="3_wjgl2"]
[ext_resource type="AudioStream" uid="uid://cnrl5pjsjlyno" path="res://Sounds/Music/menu-music-1.wav" id="4_ofl7u"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_cnsbn"]
properties/0/path = NodePath(".:selected_level")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("CanvasLayer/Background:frame")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="World1LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2hin")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(320, 180)
scale = Vector2(4, 4)
texture = ExtResource("1_crua5")
hframes = 6

[node name="HustleBtn" type="TextureButton" parent="CanvasLayer"]
offset_left = 33.0
offset_top = 33.0
offset_right = 184.0
offset_bottom = 154.0

[node name="ClockBtn" type="TextureButton" parent="CanvasLayer"]
offset_left = 395.0
offset_top = 25.0
offset_right = 485.0
offset_bottom = 109.0

[node name="WaterBtn" type="TextureButton" parent="CanvasLayer"]
offset_left = 553.0
offset_top = 124.0
offset_right = 634.0
offset_bottom = 244.0

[node name="TrashBtn" type="TextureButton" parent="CanvasLayer"]
offset_left = 383.0
offset_top = 275.0
offset_right = 517.0
offset_bottom = 347.0

[node name="ComputerBtn" type="TextureButton" parent="CanvasLayer"]
offset_left = 270.0
offset_top = 110.0
offset_right = 324.0
offset_bottom = 173.0

[node name="StartGameBtn" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.5
offset_top = -54.0
offset_right = 71.5
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_wjgl2")
theme_override_font_sizes/font_size = 48
text = "Start Game!"

[node name="PopupPanel" type="PopupPanel" parent="CanvasLayer"]
initial_position = 2
size = Vector2i(260, 60)
transparent = true

[node name="ErrorMsgLabel" type="Label" parent="CanvasLayer/PopupPanel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = 4.0
offset_right = 256.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_wjgl2")
theme_override_font_sizes/font_size = 24
text = "No valid world selected!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TipLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.0
offset_top = -9.0
offset_right = 87.0
offset_bottom = 29.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_wjgl2")
theme_override_font_sizes/font_size = 48
text = "Select a Level!"

[node name="UserIDLabel" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_wjgl2")
theme_override_font_sizes/font_size = 24
text = "User ID:"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ofl7u")
autoplay = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_cnsbn")

[connection signal="mouse_entered" from="CanvasLayer/HustleBtn" to="." method="_on_hustle_btn_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HustleBtn" to="." method="_on_hustle_btn_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/HustleBtn" to="." method="_on_hustle_btn_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/ClockBtn" to="." method="_on_clock_btn_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/ClockBtn" to="." method="_on_clock_btn_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/ClockBtn" to="." method="_on_clock_btn_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/WaterBtn" to="." method="_on_water_btn_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/WaterBtn" to="." method="_on_water_btn_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/WaterBtn" to="." method="_on_water_btn_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/TrashBtn" to="." method="_on_trash_btn_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/TrashBtn" to="." method="_on_trash_btn_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/TrashBtn" to="." method="_on_trash_btn_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/ComputerBtn" to="." method="_on_computer_btn_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/ComputerBtn" to="." method="_on_computer_btn_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/ComputerBtn" to="." method="_on_computer_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/StartGameBtn" to="." method="_on_start_game_btn_pressed"]
